--- a/html_styles_scripts/styles.css
+++ b/html_styles_scripts/styles.css
@@ -22,7 +22,6 @@ body {
   margin-right: 10px;
   overflow-x: auto;
   transition: 0.2s ease-out;
-
 }
 
 .in:hover {
@@ -71,7 +70,8 @@ body {
   cursor: pointer;
   color: gold;
   background-color: black;
-  transition: border-color 0.2s ease-in-out, background-color 0.5s, box-shadow 0.2s;
+  transition: border-color 0.2s ease-in-out, background-color 0.5s,
+    box-shadow 0.2s;
 }
 
 .numbers div:active {
